Add pictures, random information and quote sections and start styling

--- a/index.html
+++ b/index.html
@@ -4,27 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Odin Project Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="header-logo">
-            Header Logo
-        </div>
-        <ul class="header-links">
-            <li class="header-link">
-                <a href="#">link 1</a> 
-            </li>
-            <li class="header-link">
-                <a href="#">link 2</a> 
-            </li>
-            <li class="header-link">
-                <a href="#">link 3</a> 
-            </li>
-        </ul>
-    </div>
-    <div class="hero">
+    <section class="first-part">
+
+        <section class="header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <ul class="header-links">
+                <li class="header-link">
+                    <a href="#">link 1</a> 
+                </li>
+                <li class="header-link">
+                    <a href="#">link 2</a> 
+                </li>
+                <li class="header-link">
+                    <a href="#">link 3</a> 
+                </li>
+            </ul>
+        </section>
+
+        <section class="hero">
+            <div class="hero-text">
+                <div class="bold-hero-text">
+                    This website is awesome
+                </div>
+                <div class="hero-subtext">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi magnam deleniti ullam maxime! Laborum, nesciunt reprehenderit.
+                </div>
+                <button>
+                    Sign up
+                </button>
+            </div>
+            <div class="hero-image">
+                <!-- <img src="./images/kanye-pork.jpeg", width="300px", height="200px"> -->
+            </div>
+        </section>
         
-    </div>
+    </section>
+    
+    <section class="random-info">
+        <div class="subheading">
+            Some random information
+        </div>
+        <div class="picture-rack">
+            <div class="picture">   
+                <img src="./images/barberry.png", width="200px">
+                <div class="image-subtext">
+                    I like trains
+                </div>
+            </div>
+            <div class="picture">
+                <img src="./images/saffron.png", width="200px">
+                <div class="image-subtext">
+                    I like trains
+                </div>
+            </div>
+            <div class="picture">
+                <img src="./images/pepper.png", width="200px">
+                <div class="image-subtext">
+                    I like trains
+                </div>
+            </div>
+            <div class="picture">
+                <img src="./images/chilli.png", width="200px">
+                <div class="image-subtext">
+                    I like trains
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="quote">
+        <div class="actual-quote">
+            This is an inspiring quote, or a testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually 
+            read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="author">
+            Thor, God of Thunder
+        </div>
+    </section>
 </body>
 </html>
